--- a/cn.zh-CN/产品简介/应用场景.md
+++ b/cn.zh-CN/产品简介/应用场景.md
@@ -30,5 +30,5 @@
 
 ## 更多案例 {#section_yr2_4wq_ydb .section}
 
-更多关于云服务器ECS的应用场景，请参见[阿里云解决方案](https://www.alibabacloud.com/solutions)。
+更多关于云服务器ECS的应用场景，[阿里云解决方案](https://www.alibabacloud.com/solutions)。
 
